--- a/redis-pro/zh-Hans.lproj/Localizable.strings
+++ b/redis-pro/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,9 @@
   Created by chengpanwang on 2021/6/11.
   
 */
+
+// ------------------------------------------------ Redis Info Start...-------------------------------------------------------
+// server
 "hello"="哈喽";
 "REDIS_INFO_SERVER" = "一般 Redis 服务器信息";
 "REDIS_INFO_SERVER_REDIS_VERSION" = "Redis 服务器版本";
@@ -227,3 +230,4 @@
 
 // keyspace
 "REDIS_INFO_KEYSPACE" = "数据库相关的统计信息";
+// ------------------------------------------------ Redis Info End...-------------------------------------------------------
