bugfix: main view toggle in editor, redis info

--- a/redis-pro/en.lproj/Localizable.strings
+++ b/redis-pro/en.lproj/Localizable.strings
@@ -60,6 +60,7 @@
 "REDIS_INFO_SERVER_EXECUTABLE" = "服务器的可执行文件路径";
 "REDIS_INFO_SERVER_CONFIG_FILE" = "配置文件路径";
 "REDIS_INFO_SERVER_IO_THREADS_ACTIVE" = "Flag indicating if I/O threads are active";
+"REDIS_INFO_SERVER_SUPPORT_PTOD" = "";
 
 // clients
 "REDIS_INFO_CLIENTS" = "客户端的连接部分";
@@ -117,6 +118,7 @@
 "REDIS_INFO_MEMORY_ACTIVE_DEFRAG_RUNNING" = "指示活动碎片整理是否处于活动状态的标志";
 "REDIS_INFO_MEMORY_LAZYFREE_PENDING_OBJECTS" = "等待释放的对象数（由于使用ASYNC选项调用UNLINK或FLUSHDB和FLUSHALL）";
 "REDIS_INFO_MEMORY_LAZYFREED_OBJECTS" = "";
+"REDIS_INFO_MEMORY_OOM_ERR_COUNT" = "";
 
 // persistence
 "REDIS_INFO_PERSISTENCE" = "RDB和AOF相关信息";
@@ -164,11 +166,14 @@
 "REDIS_INFO_STATS_TOTAL_CONNECTIONS_RECEIVED" = "服务器接受的连接总数";
 "REDIS_INFO_STATS_TOTAL_COMMANDS_PROCESSED" = "服务器处理的命令总数";
 "REDIS_INFO_STATS_INSTANTANEOUS_OPS_PER_SEC" = "每秒处理的命令数";
+"REDIS_INFO_STATS_INSTANTANEOUS_WRITE_OPS_PER_SEC" = "";
+"REDIS_INFO_STATS_INSTANTANEOUS_READ_OPS_PER_SEC" = "";
 "REDIS_INFO_STATS_TOTAL_NET_INPUT_BYTES" = "The total number of bytes read from the network";
 "REDIS_INFO_STATS_TOTAL_NET_OUTPUT_BYTES" = "The total number of bytes written to the network";
 "REDIS_INFO_STATS_INSTANTANEOUS_INPUT_KBPS" = "The network's read rate per second in KB/sec";
 "REDIS_INFO_STATS_INSTANTANEOUS_OUTPUT_KBPS" = "The network's write rate per second in KB/sec";
 "REDIS_INFO_STATS_REJECTED_CONNECTIONS" = "由于maxclients限制而拒绝的连接数";
+"REDIS_INFO_STATS_REJECTED_CONNECTIONS_STATUS" = "";
 
 "REDIS_INFO_STATS_SYNC_FULL" = "The number of full resyncs with replicas";
 "REDIS_INFO_STATS_SYNC_PARTIAL_OK" = "The number of accepted partial resync requests";
@@ -181,8 +186,13 @@
 "REDIS_INFO_STATS_EXPIRE_CYCLE_CPU_MILLISECONDS" = "The cumulative amount of time spend on active expiry cycles";
 
 "REDIS_INFO_STATS_EVICTED_KEYS" = "由于maxmemory限制而导致被驱逐的key的数量";
+"REDIS_INFO_STATS_EVICTED_KEYS_PER_SEC" = "每秒由于maxmemory限制而导致被驱逐的key的数量";
 "REDIS_INFO_STATS_KEYSPACE_HITS" = "在主字典中成功查找到key的次数";
 "REDIS_INFO_STATS_KEYSPACE_MISSES" = "在主字典中查找key失败的次数";
+"REDIS_INFO_STATS_HITS_PER_SEC" = "";
+"REDIS_INFO_STATS_MISSES_PER_SEC" = "";
+"REDIS_INFO_STATS_HIT_RATE_PERCENTAGE" = "";
+
 "REDIS_INFO_STATS_PUBSUB_CHANNELS" = "拥有客户端订阅的全局pub/sub通道数";
 "REDIS_INFO_STATS_PUBSUB_PATTERNS" = "拥有客户端订阅的全局pub/sub模式数";
 "REDIS_INFO_STATS_LATEST_FORK_USEC" = "最新fork操作的持续时间，以微秒为单位";
@@ -203,6 +213,24 @@
 "REDIS_INFO_STATS_TOTAL_WRITES_PROCESSED" = "Total number of write events processed";
 "REDIS_INFO_STATS_IO_THREADED_READS_PROCESSED" = "Number of read events processed by the main and I/O threads";
 "REDIS_INFO_STATS_IO_THREADED_WRITES_PROCESSED" = "Number of write events processed by the main and I/O threads";
+
+
+"REDIS_INFO_STATS_TRAFFIC_CONTROL_INPUT" = "";
+"REDIS_INFO_STATS_TRAFFIC_CONTROL_INPUT_STATUS" = "";
+"REDIS_INFO_STATS_TRAFFIC_CONTROL_OUTPUT" = "";
+"REDIS_INFO_STATS_TRAFFIC_CONTROL_OUTPUT_STATUS" = "";
+"REDIS_INFO_STATS_STAT_AVG_RT" = "";
+"REDIS_INFO_STATS_STAT_MAX_RT" = "";
+"REDIS_INFO_STATS_PACLUSTER_MIGRATE_SUM_RT" = "";
+"REDIS_INFO_STATS_PACLUSTER_MIGRATE_MAX_RT" = "";
+"REDIS_INFO_STATS_PACLUSTER_MIGRATE_QPS" = "";
+"REDIS_INFO_STATS_PACLUSTER_IMPORT_SUM_RT" = "";
+"REDIS_INFO_STATS_PACLUSTER_IMPORT_MAX_RT" = "";
+"REDIS_INFO_STATS_PACLUSTER_IMPORT_QPS" = "";
+"REDIS_INFO_STATS_PACLUSTER_MIGRATE_START_TIME" = "";
+"REDIS_INFO_STATS_PACLUSTER_IMPORTING_START_TIME" = "";
+"REDIS_INFO_STATS_SLOT_PSYNC_OK" = "";
+"REDIS_INFO_STATS_SLOT_PSYNC_ERR" = "";
 
 // replication
 "REDIS_INFO_REPLICATION" = "主/从复制信息";
@@ -255,6 +283,12 @@
 // cluster
 "REDIS_INFO_CLUSTER" = "Redis集群信息";
 "REDIS_INFO_CLUSTER_CLUSTER_ENABLED" = "表示已启用Redis集群";
+"REDIS_INFO_CLUSTER_DATABASES" = "";
+"REDIS_INFO_CLUSTER_NODECOUNT" = "";
+
+// pacluster
+"REDIS_INFO_PACLUSTER" = "";
+"REDIS_INFO_PACLUSTER_PACLUSTER_ENABLED" = "";
 
 // keyspace
 "REDIS_INFO_KEYSPACE" = "数据库相关的统计信息";
