--- a/redis-pro/zh-Hans.lproj/Localizable.strings
+++ b/redis-pro/zh-Hans.lproj/Localizable.strings
@@ -9,7 +9,9 @@
 // system
 "UNIT_MICROSECOND" = "1秒 = 1,000,000 微秒";
 
-
+// ------------------------------------------------ Redis Config Start...-------------------------------------------------------
+"REDIS_CONFIG_REWRITE" = "CONFIG REWRITE 命令对启动 Redis 服务器时所指定的 redis.conf 文件进行改写： 因为 CONFIG SET 命令可以对服务器的当前配置进行修改， 而修改后的配置可能和 redis.conf 文件中所描述的配置不一样， CONFIG REWRITE 的作用就是通过尽可能少的修改， 将服务器当前所使用的配置记录到 redis.conf 文件中。";
+// ------------------------------------------------ Redis Config End...-------------------------------------------------------
 
 // ------------------------------------------------ Redis Slow Log Start...-------------------------------------------------------
 "REDIS_SLOW_LOG_ID" = "唯一性(unique)的日志标识符, 日志的唯一 id 在 Redis 服务器重启的时候会重置";
