--- a/redis-pro/zh-Hans.lproj/Localizable.strings
+++ b/redis-pro/zh-Hans.lproj/Localizable.strings
@@ -5,6 +5,19 @@
   Created by chengpanwang on 2021/6/11.
   
 */
+// -------------------------------------------------- redis hash message start ---------------------------------------------------
+
+"HASH_DELETE_CONFIRM_TITLE'%@'" = "Delete hash field '%@'?";
+"HASH_DELETE_CONFIRM_MESSAGE'%@'" = "Are you sure you want to delete the hash field '%@'? This operation cannot be undone.";
+// -------------------------------------------------- redis hash message end -----------------------------------------------------
+
+
+// -------------------------------------------------- redis key message start ---------------------------------------------------
+
+"REDIS_KEY_DELETE_CONFIRM_TITLE'%@'" = "Delete key '%@'?";
+"REDIS_KEY_DELETE_CONFIRM_MESSAGE'%@'" = "Are you sure you want to delete the key '%@'? This operation cannot be undone.";
+
+// -------------------------------------------------- redis key message end -----------------------------------------------------
 
 // ------------------------------------------------ system confirm message start ------------------------------------------------
 "CONFIRM_FAVORITE_REDIS_TITLE'%@'" = "Delete favorite redis '%@'?";
