feat: 增加快速分页, 精确分页模式

--- a/redis-pro/zh-Hans.lproj/Localizable.strings
+++ b/redis-pro/zh-Hans.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "HELP_SEARCH_BAR" = "支持redis glob 风格的模式参数, 示例: key*, re?is";
 "HELP_TTL" = "单位(秒), -1表示永不过期, -2 表示key不存在, 修改后回车提交修改!";
 "HELP_REFRESH" = "刷新";
+"HELP_FAST_PAGE" = "快速分页, true: 表示最多查询99页， 超99页显示99+, 对性能更友好; false: 表示精确分页，会调用scan精确查询模糊匹配的key数量。";
 // -------------------------------------------------- redis help message end -----------------------------------------------------
 
 // -------------------------------------------------- redis string message start -------------------------------------------------
